# pupactor

./: .gitignore  Cargo.toml
pupactor/: Cargo.toml
pupactor/src/: actor.rs  actor_command.rs  actor_ref.rs  change_state.rs  handle.rs  init_actor.rs  lib.rs  listener.rs  stop_actor.rs
pupactor_example/: Cargo.toml
pupactor_example/src/: first_test_actor.rs  main.rs
pupactor_macro/: Cargo.toml
pupactor_macro/src/: lib.rs
