[package]
name = "pupactor"
version = "0.1.0"
edition = "2021"
description = "Pupactor is actor model library built with tokio"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
impl-enum = "0.3.1"
quote = "1.0"
syn = {  version = "2.0.77", features = ["full"]}
pupactor_macro = { version = "0.1.0", path = "../pupactor_macro" }