[package]
name = "pupactor_example"
version = "0.1.1"
edition = "2021"
description = "Examples for pupactor use"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
pupactor = { version = "0.1.0", path = "../pupactor" }

[lints.rust]
unsafe_code = "forbid"